package name change

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "p-scrollbar",
+  "name": "ng-perfect-scrollbar",
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^15.0.0",
